gcc/testsuite/g++.old-deja/g++.other/redecl4.C
// { dg-do assemble  }
int main() {
  struct A {
    void f();			// { dg-message "previous" } already declared
    void f();			// { dg-error "overloaded" } already declared
  };
}
